[package]
name = "zero2prod"
version = "0.1.0"
authors = ["matth"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "3"
reqwest = "*"
actix-rt = "*"